--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<br><br><br><br><br>
-<app-portafolio></app-portafolio>
-<br><br><br><br><br>
+<app-about></app-about>
 <app-footer></app-footer>
