--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -25,9 +25,9 @@
           </div>
 
         <div *ngIf="!ProductosService.cargada" class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-          <a *ngFor="let producto of ProductosService.productos" routerLink="/portafolio-item" class="animated fadeInDown rk-item ae-masonry__item">
-            <img src="assets/productos/{{producto.url}}.jpg" alt="">
-            <div class="item-meta">
+          <a *ngFor="let producto of ProductosService.productos" [routerLink]="['/item',producto.cod]" class="animated fadeInDown rk-item ae-masonry__item">
+            <img [routerLink]="['/item',producto.cod]" src="assets/productos/{{producto.url}}.jpg" alt="">
+            <div [routerLink]="['/item',producto.cod]" class="item-meta">
               <h2>{{producto.titulo}}</h2>
               <p>{{producto.categoria}}</p>
             </div>
