Fin de la seccion 7

--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,5 +1,5 @@
 
-      <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
+      <section  style="padding-top: 160px;" class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
 
           <div align="center" *ngIf="ProductosService.cargada"> 
             <h2>Cargando</h2>
