--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="ae-container-fluid ae-container-fluid--full rk-header ">
+<header  class="ae-container-fluid ae-container-fluid--full rk-header ">
     <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
     <label for="mobile-menu">
       <svg>
@@ -20,14 +20,20 @@
           <li class="rk-menu__item" routerLinkActive="active"><a  routerLink="about" class="rk-menu__link">About</a>
           </li>
         </ul>
-        <form class="rk-search">
-          <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+
+        <div class="rk-search">
+          <input type="text" 
+          (keyup)="buscarProductos( txtBuscar.value )" 
+          placeholder="Buscar" 
+          id="urku-search" 
+          class="rk-search-field"
+          #txtBuscar > 
           <label for="urku-search">
             <svg>
               <use xlink:href="assets/img/symbols.svg#icon-search"></use>
             </svg>
           </label>
-        </form>
+        </div>
       </nav>
     </div>
   </header>
